# Crying-Music

./: .gitignore  COPYRIGHT  README.md  README_en-US.md  学习大纲.md
docs/: QML-QtQuick.md
src/quick_app/: CMakeLists.txt  DEVELOP.md  Main.qml  README.md  defines.hpp  main.cpp  resource.qrc
src/quick_app/components/: MenuBar.hpp  MusicPlayer.hpp  Themer.hpp
src/quick_app/qml/: Assist.qml  Define.qml
